# heart-earth

./: .env.example  .gitignore  .vercelignore  AUTHENTICATION_RESEARCH.md  Cargo.toml  DIGITALOCEAN_DEPLOYMENT.md  DIGITALOCEAN_UPDATE.md  Dockerfile  HEART_EARTH_ARCHITECTURE.md  P2P_SECURITY_CONSOLIDATED.md  QUICKSTART.md  README.md  SERVER_DEPLOYMENT.md  WEB_INTEGRATION_PLAN.md  p2p-integration-test-plan.md  railway.toml
p2p/: Cargo.toml
p2p/src/: behaviour.rs  browser_websocket.rs  config.rs  error.rs  identity.rs  lib.rs  transport.rs
p2p/tests/: behaviour_tests.rs  identity_tests.rs  integration_bootstrap.rs  integration_messaging.rs  integration_peer_connect.rs  integration_real_discovery.rs  integration_resilience.rs  integration_test.rs  keypair_persistence_test.rs  transport_tests.rs  websocket_integration_test.rs
p2p/tests/common/: integration.rs  mod.rs
wallet/: Cargo.toml
wallet/benches/: wallet_bench.rs
wallet/src/: account.rs  address.rs  biometric.rs  derivation.rs  encryption.rs  error.rs  identity.rs  lib.rs  message_signing.rs  nonce.rs  seed.rs  storage.rs  structured_signing.rs
wallet/tests/: ascii_security_test.rs  cross_platform_compatibility_test.rs  encryption_edge_cases.rs  integration_tests.rs  key_derivation_tests.rs  security_tests.proptest-regressions  security_tests.rs  storage_tests.rs  unicode_security_test.rs
wallet/tests/common/: mod.rs
wallet/tests/fixtures/: test_vectors.rs
wasm/: Cargo.toml  test.html
wasm/src/: lib.rs  wasm_p2p.rs  wasm_wallet.rs
wasm/tests/: compatibility_test.rs
website/: SECURITY.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx  page.tsx
website/app/wallet/: page.tsx
website/components/: CreateWalletScreen.tsx  DashboardScreen.tsx  LoginScreen.tsx  WelcomeScreen.tsx  footer.tsx
