[workspace]
members = [
    "wallet",
    "blockchain", 
    "p2p",
    "wasm"
]
resolver = "2"

[workspace.dependencies]
# Crypto
secp256k1 = "0.31"
sha2 = "0.10"
hmac = "0.12"
blake3 = "1.5"

# HD Wallet
bip32 = { version = "0.5", features = ["secp256k1", "mnemonic", "bip39"] }
bip39 = { version = "2.2", features = ["rand"] }

# Encoding
bs58 = "0.5"
hex = "0.4"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Security
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
argon2 = "0.5"
aes-gcm = "0.10"

# CLI & Storage
rpassword = "7.3"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

# P2P
libp2p = { version = "0.56", features = ["tcp", "websocket", "dns", "tokio", "noise", "yamux", "gossipsub", "kad", "identify", "ping", "macros"] }
libp2p-identity = { version = "0.2.12", features = ["peerid", "secp256k1", "ed25519"] }
tokio = { version = "1.40", features = ["full"] }

# Ed25519 derivation
slip10_ed25519 = "0.1.3"
ed25519-dalek = "2.1"

# Testing & Security
proptest = "1.4"
quickcheck = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
rstest = "0.18"
criterion = { version = "0.5", features = ["html_reports"] }
test-case = "3.3"
subtle = "2.5"
consistenttime = "0.1"

# WASM support
getrandom = { version = "0.2.16", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "CredentialsContainer", "PublicKeyCredential", "AuthenticatorResponse", "Navigator", "Window"] }