[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true }
libp2p-identity = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
wallet = { path = "../wallet" }

# CLI
clap = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }

# HTTP for Railway health checks
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
tokio-test = "0.4"
futures = "0.3"
