[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bip32 = { workspace = true }
bip39 = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
libp2p-identity = { workspace = true }

# Security & Storage
argon2 = { workspace = true }
aes-gcm = { workspace = true }
dirs = { workspace = true }

# Additional wallet-specific deps
ripemd = "0.1"
thiserror = "1.0"
subtle = { workspace = true }
consistenttime = { workspace = true }
slip10_ed25519 = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
quickcheck = { workspace = true }
arbitrary = { workspace = true }
rstest = { workspace = true }
criterion = { workspace = true }
test-case = { workspace = true }
consistenttime = { workspace = true }
base64 = "0.21"

[[bench]]
name = "wallet_bench"
harness = false