[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core WASM support
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# WASM-compatible crypto (pure Rust alternatives)
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed25519-dalek = { workspace = true }
bip39 = { workspace = true }
bip32 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
ripemd = "0.1"
slip10_ed25519 = { workspace = true }
libp2p-identity = { workspace = true }

# Random number generation for browser
getrandom = { workspace = true }

# Serialization for returning data to JS
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# For async support (we'll need this later)
wasm-bindgen-futures = "0.4"

# Enable console logging in browser
web-sys = { version = "0.3", features = ["console"] }

# P2P networking for WASM (minimal for now)  
js-sys = "0.3"

# Time handling for message timestamps
chrono = { workspace = true }

# Ed25519 P2P signing only (WASM compatible, no secp256k1 needed)

[dev-dependencies]
# For testing compatibility with CLI wallet  
wallet = { path = "../wallet" }